<resources>
    <string name="app_name">KolKata Sub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Drawer is opened</string>
    <string name="drawer_closed">Drawer is closed</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_chooser">Select Station Name</string>
    <string name="title_activity_exit">Exit</string>
    <string name="title_activity_train_time_table">Schedule</string>
    <string name="banner_ad_unit_id_main_new">ca-app-pub-1846401976471462/3439658638</string>
    <!--<string name="banner_ad_unit_id_main_new">@string/test_banner_ad_unit_id</string>-->
    <string name="banner_ad_unit_id_traintable">ca-app-pub-1846401976471462/8292589430</string>
    <!--<string name="banner_ad_unit_id_traintable">@string/test_banner_ad_unit_id</string>-->
    <string name="banner_ad_unit_id_traintimetable">ca-app-pub-1846401976471462/9769322639</string>
    <!--<string name="banner_ad_unit_id_traintimetable">@string/test_banner_ad_unit_id</string>-->
    <string name="banner_ad_id_train_route_frag">ca-app-pub-1846401976471462/5358012042</string>
    <!--<string name="banner_ad_id_train_route_frag">@string/test_banner_ad_unit_id</string>-->
    <string name="interstitial_ad_unit_id">ca-app-pub-1846401976471462/9486192237</string>
    <!--<string name="interstitial_ad_unit_id">@string/test_interstitial_ad_unit_id</string>-->
    <string name="video_reward_id">ca-app-pub-1846401976471462/8678186243</string>
    <!--<string name="video_reward_id">@string/test_reward_video_ad_unit_id</string>-->
    <string name="pnr_mid_ad_id">ca-app-pub-1846401976471462/8071326364</string>
    <!--<string name="pnr_mid_ad_id">@string/test_banner_ad_unit_id</string>-->
    <string name="train_schedule_mid_ad_id">ca-app-pub-1846401976471462/1097410829</string>
    <!--<string name="train_schedule_mid_ad_id">@string/test_banner_ad_unit_id</string>-->
    <string name="pnr_status_activity_ad_id">ca-app-pub-1846401976471462/2675884672</string>
    <!--<string name="pnr_status_activity_ad_id">@string/test_banner_ad_unit_id</string>-->
    <string name="ad_reward_remove_ad">ca-app-pub-1846401976471462/3585724787</string>
    <!--<string name="ad_reward_remove_ad">@string/test_reward_video_ad_unit_id</string>-->

    <!--Test Ad Id-->
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_video_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="test_reward_video_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="about_us"> We are small group of enthusiast developers working hard to give you good services. And We are happy working behind the scene.</string>
    <string name="divider"><![CDATA[-->]]></string>
    <string name="title_activity_download">Download Zone</string>
    <string name="pref_previously_started">false</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="action_hide">Hide</string>
    <string name="action_anchor_enable">Enable</string>
    <string name="hello">Hello</string>
    <string name="follow">Follow</string>
    <string name="action_show">Show</string>
    <string name="action_anchor_disable">Disable</string>
    <string name="hist_string"><![CDATA[<---- Search History ---->]]></string>
    <string name="preference_file_key">freaky.devs.kolkata</string>
    <string name="isDarkMode">isDarkMode</string>
    <string name="yeschange">Yes ! Change it</string>
    <string name="openDrawer">Drawer Opened</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="date">Date</string>
    <string name="title_activity_train_list">TrainList</string>
    <string name="capuccino">Cappuccino</string>
    <string name="string_cofee"> We always work here to help you in your journey. We love to give good services to you.\n\nThis is your turn now. Help developer buy a cup of coffee by viewing ad and Installing the App.</string>
    <string name="kolkata_sub">KolKata Sub</string>
    <string name="kolkata_sub_bengali">কলকাতা সাব</string>
    <string name="mail_us_at">Mail us at:</string>
    <string name="mymail">support@freakydevs.in</string>
    <string name="string1">http://pnr.railyatri.in/api/pnr/journey/</string>
    <string name="string2">/null/null/null/null/null.json</string>
    <string name="noads">Remove Ad</string>
    <string name="remove_ad">Do not like ads!! Here is an Offer, Watch an Ad and Install the App and remove the ads for 3 days.</string>

    <string name="title_about_us">About Us</string>
    <string name="text_please_wait">Please Wait…</string>
    <string name="text_buy_a_cofee">Buy a Coffee</string>
    <string name="text_thanks_for_treat">Thank You for Your treat \\uD83D\\uDE03</string>
    <string name="text_get_in_touch">Get In Touch</string>
    <string name="text_sending">Sending…</string>
    <string name="text_fill_all_details">Please fill all details!</string>
    <string name="text_fill_name">Please Fill Your Name!</string>
    <string name="text_fill_email">Please Fill Your Email!</string>
    <string name="text_fill_message">Please Fill Your Message!</string>
    <string name="text_message_sent">Your Message has been sent!!</string>
    <string name="share_text">Download this App for \'Offline\' Train Schedule. http://play.google.com/store/apps/details?id=in.freakydevs.kolkatasub</string>
    <string name="share_with">Share With</string>
    <string name="app_url">http://play.google.com/store/apps/details?id=in.freakydevs.kolkatasub</string>
    <string name="database_download_message">Database Not Downloaded Yet!\n\nOr Database Corrupted!\n\nPlease Download it.</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="no_direct_train">No Direct Train Available for this Route!</string>
    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <string name="database_update_available">Database Update Available!!</string>
    <string name="app_update_available">App Update Available!!</string>
    <string name="checking">Checking…</string>
    <string name="latest_version_of_app">You have latest version of App!</string>
    <string name="latest_version_of_database">You have latest version of Database!</string>
    <string name="enter_valid_pnr">Please Enter valid PNR and Try Again!!</string>
    <string name="download_database_first_time">Download DataBase for First Time.\n\nIt is less than 1 MB!</string>
    <string name="press_back_again">Please click BACK again to exit!</string>
    <string name="bye_message">Thank you for using KolKata Sub\nHope to see you soon.</string>
    <string name="policy_1">This application uses a unique user identifier for advertising purposes, it is shared with third-party companies.</string>
    <string name="policy_2">This application sends error reports, installation and send it to a server of the Fabric.io company to analyze and process it.</string>
    <string name="policy_3">This application requires internet access and must collect the following information: Installed applications and history of installed applications, ip address, unique installation id, token to send notifications, version of the application, time zone and information about the language of the device.</string>
    <string name="policy_4">All details about the use of data are available in our Privacy Policies, as well as all Terms of Service links below.</string>
    <string name="accept_terms_condition">Please accept Terms and Condition to continue.</string>
</resources>
